--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,7 @@ streamlit==1.39.0
 google-generativeai==0.8.3
 streamlit-audiorec==0.1.3
 sentence-transformers==3.2.1
+av==12.3.0
+pydub==0.25.1
+twilio==9.3.6
+streamlit-webrtc==0.47.9
