--- a/requirements.txt
+++ b/requirements.txt
@@ -3,3 +3,6 @@ pandas==2.2.0
 streamlit-autorefresh==1.0.1
 google-cloud-speech==2.28.0
 pyaudio==0.2.14
+fastapi==0.115.3
+uvicorn==0.32.0
+python-multipart==0.0.12
