--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,5 @@
 .streamlit/secrets.toml
 venv/
 __pycache__/
-/pages/config/creds.json
-pages/config/*.json
+/components/config/creds.json
+components/config/*.json
